[gd_scene load_steps=2 format=3 uid="uid://brjt7p30rj5we"]

[ext_resource type="Script" path="res://ui/cached_file_dialog/cached_file_dialog.gd" id="1_u4p38"]

[node name="CachedFileDialog" type="FileDialog"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
script = ExtResource("1_u4p38")

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="dir_selected" from="." to="." method="_on_dir_selected"]
[connection signal="file_selected" from="." to="." method="_on_file_selected"]
